--- a/.github/workflows/govulncheck.yml
+++ b/.github/workflows/govulncheck.yml
@@ -18,4 +18,4 @@ jobs:
         with:
           go-version: '1.22.1'
       - run: go install golang.org/x/vuln/cmd/govulncheck@latest
-      - run: govulncheck -show=stacks -test ./...
+      - run: govulncheck -show=traces -test ./...
