--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -14,9 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # Config options can be found in README here: https://github.com/golangci/golangci-lint-action
-      - uses: actions/setup-go@v4
-        with:
-            go-version: '1.22.1'
+      - uses: ./.github/actions/setup-go
       - uses: actions/checkout@v3
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
