--- a/.github/workflows/govulncheck.yml
+++ b/.github/workflows/govulncheck.yml
@@ -14,8 +14,6 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ssh-key: ${{ secrets.DEPLOY_KEY }}
-      - uses: actions/setup-go@v4
-        with:
-          go-version: '1.22.1'
+      - uses: ./.github/actions/setup-go
       - run: go install golang.org/x/vuln/cmd/govulncheck@latest
       - run: govulncheck -show=traces -test ./...
