--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -13,6 +13,9 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
+    - name: Fix binfmt flags with multiarch/qemu-user-static
+      run: |
+        docker run --rm --privileged multiarch/qemu-user-static --reset -p yes -c yes
     - uses: docker/setup-buildx-action@v3
 
     - name: Get version.Version from the code
