--- a/.github/workflows/govulncheck.yml
+++ b/.github/workflows/govulncheck.yml
@@ -15,5 +15,5 @@ jobs:
         with:
           ssh-key: ${{ secrets.DEPLOY_KEY }}
       - uses: ./.github/actions/setup-go
-      - run: go install golang.org/x/vuln/cmd/govulncheck@latest
+      - run: go install golang.org/x/vuln/cmd/govulncheck@v1.1.3
       - run: govulncheck -show=traces -test ./...
